--- a/src/main/resources/templates/pacientes/tela-paciente.html
+++ b/src/main/resources/templates/pacientes/tela-paciente.html
@@ -35,8 +35,8 @@
             <dt>Sexo:</dt>
             <dd th:text="${paciente.sexo}">Masculino</dd>
 
-            <dt>NIF:</dt>
-            <dd th:text="${paciente.nif ?: 'Não informado'}">123456789</dd>
+            <dt>NUIT:</dt>
+            <dd th:text="${paciente.nuit ?: 'Não informado'}">123456789</dd>
 
             <dt>Documento de Identidade:</dt>
             <dd th:text="${paciente.documentoIdentidade ?: 'Não informado'}">987654321</dd>
@@ -53,8 +53,8 @@
             <dt>Profissão:</dt>
             <dd th:text="${paciente.profissao ?: 'Não informado'}">Engenheiro</dd>
 
-            <dt>Número de Utente SNS:</dt>
-            <dd th:text="${paciente.numeroUtenteSNS ?: 'Não informado'}">SNS123</dd>
+            <dt>Número de Paciente NP:</dt>
+            <dd th:text="${paciente.numeroPacienteNP ?: 'Não informado'}">NP123</dd>
 
             <dt>Familiar/Responsável:</dt>
             <dd th:text="${paciente.nomeFamiliarResponsavel ?: 'Não informado'}">Nome do Familiar</dd>
