--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,7 +26,7 @@ box-shadow: 0 0 15px rgba(0,0,0,0.1);
 </head>
 <body>
 <div class="login-container">
-<h2 class="text-center mb-4">Sistema de Gestão de Arquivos Médicos</h2>
+<h2 class="text-center mb-4">Sistema de Gestão de Arquivos Médicos de Pacientes</h2>
 <h4 class="text-center mb-4">Login do Médico</h4>
 
             <div th:if="${errorMessage}" class="alert alert-danger" role="alert" th:text="${errorMessage}">
