--- a/src/main/resources/templates/painel.html
+++ b/src/main/resources/templates/painel.html
@@ -87,7 +87,7 @@ Bem-vindo(a), <strong th:text="${nomeUsuarioLogado ?: principal.username}">Usuá
         </div>
 
         <footer class="text-center mt-5 py-3 bg-light">
-            <p>&copy; <span th:text="${#dates.year(#dates.createNow())}">2025</span> Sistema de Gestão de Arquivos Médicos. Todos os direitos reservados.</p>
+            <p>&copy; <span th:text="${#dates.year(#dates.createNow())}">2025</span> Sistema de Gestão de Arquivos Médicos de Pacientes. Todos os direitos reservados.</p>
         </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
